:bug: Fixed Horizontal scroll in cart

--- a/src/scss/components/_cart.scss
+++ b/src/scss/components/_cart.scss
@@ -23,6 +23,7 @@
         flex-direction: row;
         gap: 20px;
         justify-content: space-between;
+        flex-wrap: wrap;
         border: 2px grey solid;
         padding: 5px;
         margin-bottom: 10px;
